<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="ob_one_title">Weather Forecast</string>
    <string name="ob_two_title">Nature Sounds</string>
    <string name="ob_three_title">Weather Tips</string>
    <string name="ob_one_desc">Welcome to our weather app! Stay\n informed with accurate weather forecasts\n and easily check current weather\n conditions.</string>
    <string name="ob_two_desc">Experience the perfect blend of\n nature and music, with\n soothing tunes that helps you relax!\n</string>
    <string name="ob_three_desc">Get useful weather tips and\n recommendations to make the most\n of your day, keeping you prepare for\n any weather conditions!</string>
    <string name="sounds_dash"><font color="#FFFFFF" size="30"><b>Sounds</b></font>\n<font color="#8FFFFFFF" size="16">Enjoy how nature sounds like..</font></string>
    <string name="t_o_u">Application is informing you about the app, that gives you many services and important information for safer and efficient use.</string>
    <string name="i_declare_i_have_read_and_accepted_the_following_condition_of_use">I declare I have read and accepted the following condition of use.</string>
    <string name="if_we_find_the_app_is_being_used_outside_its_terms_of_use_we_may_restrict_access_to_it">If we find the app is being used outside its terms of use, we may restrict access to it.</string>
    <string name="any_type_of_modification_to_the_app_or_its_components_is_not_allowed">Any type of modification to the app or its components is not allowed.</string>
    <string name="privacy_policy_may_be_updated_from_time_to_time_for_any_reason_we_will_notify_you_of_any_changes_to_our_privacy_policy_by_posting_the_new_privacy_policy_here">Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here.</string>
    <string name="we_do_not_share_any_kind_of_your_personal_data_with_third_parties">We do not share any kind of your Personal Data with third parties.</string>
    <string name="you_can_find_out_more_information_by_clicking_on_the">You can find out more information by clicking on the</string>
    <string name="tc" translatable="false">
    Posting rules you should be taking care of before you start interaction on our website/application: Weather Forecast
    \n
    \nAssuring you carry the rights and eligibility to post any form of content you are about to share. We never permit nudism on application/website.
    \n
    \nWe won\'t allow posting of sexually explicit content, sexually explicit text, images, or audio content depicting extreme sexual acts such as acts of posting Content that drives traffic to pornographic online services. Please note that we may make exceptions based on artistic, educational, historical, documentary, or scientific nature, or where there are other considerable benefits to the public at large.
    \n
    \nWe don\'t permit encouragement or applaud towards terrorism, formed crime scenes or hate association groups on our application/website. Attempting to sell sexual services or weapons and harmful drugs are also not permitted. We will remove reasonable threats of severity, hate arousing content/speech and the intentionally pointing of private individuals. We do not permit attacks/abuse based on skin colour, native, sex, gender, gender identity, sexual orientation, religion, disability or disease.
    \n
    \nGraphic violence is not allowed and we may remove videos or images of intense, graphic violence to make sure our application/website stays appropriate for everyone.
    \n
    \nIf anyone or any account is spotted doing the above restricted activities they can be booked and arrested for the same. If viewers spot any violations of the above rules they have the right to report the content to us by using the report feature given in our application/ website.
        </string>
    <string name="accept">Accept</string>
    <string name="following_link">Following link :</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="pp_p"><u>Privacy policy</u></string>
    <string name="units">Units</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="wind_unit">Wind Unit</string>
    <string name="rain_unit">Rain Unit</string>
    <string name="pressure_unit">Pressure Unit</string>
    <string name="visibility_unit">Visibility Unit</string>
    <string name="time_format">Time Format</string>
    <string name="date_format">Date Format</string>
    <string name="km_h">km/h</string>
    <string name="mph">mph</string>
    <string name="m_s">m/s</string>
    <string name="mm">mm</string>
    <string name="inch">in</string>
    <string name="mbar">mbar</string>
    <string name="bar">bar</string>
    <string name="psi">psi</string>
    <string name="inhg">inHg</string>
    <string name="mmhg">mmHg</string>
    <string name="km">km</string>
    <string name="mile">mile</string>
    <string name="_24_hour_clock">24-hour clock</string>
    <string name="_12_hour_clock">12-hour clock</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="yyyy_mm_dd">yyyy/mm/dd</string>
    <string name="fahrenheit">ºF</string>
    <string name="celsius">ºC</string>
    <string name="skip"><u>Skip</u></string>
    <string name="got_it"><u>Got it</u></string>

</resources>